--- a/index.html
+++ b/index.html
@@ -48,21 +48,35 @@
         </div>
         </div>
         <div class="panel">
-          <div class="panel-all">
+          <div class="panel-all border">
             <i class="fa-solid fa-bars"></i>
             All
           </div>
-          <div class="panel-ops">
-            <p>Today's Deals</p>
-            <p>Customer Service</p>
-            <p>Registry</p>
-            <p>Gift Cards</p>
+          <div class="panel-ops border">
+            <p>Fresh</p>
+            <p>Amazon miniTV</p>
             <p>Sell</p>
+            <p>Best Sellers</p>
+            <p>Today's Deals</p>
+            <p>Gift Cards</p>
           </div>
-          <div class="panel-deals">
-            Shop Deals In Electronics
+          <div class="panel-deals border">
+            New Launch from Mobiles, Electronics & more | Shop Now
           </div>
         </div>
       </header>
+      <div class="hero-section">
+      <div class="shop-section">
+        <div class="box1 box"><h1>Upto 75% off|<br>Headphones</h1>
+          <div class="box-content">
+            <div class="box-img" style="background-image: url('https://m.media-amazon.com/images/I/41ThUxORQvL._SX300_SY300_QL70_FMwebp_.jpg');"></div>
+            <p>See more offers</p>
+          </div>
+        </div>
+        <div class="box2 box"><h2>Upto 60% off| Styles for men</h2></div>
+        <div class="box3 box"><h3>Revamp your home in style</h3></div>
+        <div class="box4 box"><h4>Get the perfect screen size| TVs starting <i class="fa-solid fa-indian-rupee-sign"></i>6,999</h4></div>
+        </div>
+      </div>
     </body>
-</html>
+</html> 
