--- a/index.html
+++ b/index.html
@@ -67,15 +67,54 @@
       </header>
       <div class="hero-section">
       <div class="shop-section">
-        <div class="box1 box"><h1>Upto 75% off|<br>Headphones</h1>
+        <div class="box"><h1>Upto 75% off|<br>Headphones</h1>
           <div class="box-content">
             <div class="box-img" style="background-image: url('https://m.media-amazon.com/images/I/41ThUxORQvL._SX300_SY300_QL70_FMwebp_.jpg');"></div>
             <p>See more offers</p>
           </div>
         </div>
-        <div class="box2 box"><h2>Upto 60% off| Styles for men</h2></div>
-        <div class="box3 box"><h3>Revamp your home in style</h3></div>
-        <div class="box4 box"><h4>Get the perfect screen size| TVs starting <i class="fa-solid fa-indian-rupee-sign"></i>6,999</h4></div>
+        <div class="box"><h2>Upto 60% off| Styles for men</h2>
+          <div class="box-content">
+            <div class="box-img" style="background-image: url('file:///C:/Users/hp/Pictures/Men_pc_deal._SX3000_QL85_.jpg');"></div>
+            <p>See more offers</p>
+          </div>
+        </div>
+        <div class="box"><h3>Revamp your home in style</h3>
+          <div class="box-content">
+            <div class="box-img" style="background-image: url('file:///C:/Users/hp/Pictures/StoryHome_-_PC._SX3000_QL85_.jpg');"></div>
+            <p>See more offers</p>
+          </div>
+        </div>
+        <div class="box"><h4>Get the perfect screen size| TVs starting <i class="fa-solid fa-indian-rupee-sign"></i>6,999</h4>
+          <div class="box-content">
+            <div class="box-img" style="background-image: url('file:///C:/Users/hp/Pictures/BLAUPUNKT_Bannet_1242x700.jpg');"></div>
+            <p>See more offers</p>
+          </div>
+        </div>
+        <div class="box"><h1>Upto 75% off|<br>Headphones</h1>
+          <div class="box-content">
+            <div class="box-img" style="background-image: url('https://m.media-amazon.com/images/I/41ThUxORQvL._SX300_SY300_QL70_FMwebp_.jpg');"></div>
+            <p>See more offers</p>
+          </div>
+        </div>
+        <div class="box"><h2>Upto 60% off| Styles for men</h2>
+          <div class="box-content">
+            <div class="box-img" style="background-image: url('file:///C:/Users/hp/Pictures/Men_pc_deal._SX3000_QL85_.jpg');"></div>
+            <p>See more offers</p>
+          </div>
+        </div>
+        <div class="box"><h3>Revamp your home in style</h3>
+          <div class="box-content">
+            <div class="box-img" style="background-image: url('file:///C:/Users/hp/Pictures/StoryHome_-_PC._SX3000_QL85_.jpg');"></div>
+            <p>See more offers</p>
+          </div>
+        </div>
+        <div class="box"><h4>Get the perfect screen size| TVs starting <i class="fa-solid fa-indian-rupee-sign"></i>6,999</h4>
+          <div class="box-content">
+            <div class="box-img" style="background-image: url('file:///C:/Users/hp/Pictures/BLAUPUNKT_Bannet_1242x700.jpg');"></div>
+            <p>See more offers</p>
+          </div>
+        </div>
         </div>
       </div>
     </body>
