--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
             <p>See more offers</p>
           </div>
         </div>
-        <div class="box"><h1>Upto 75% off|<br>Headphones</h1>
+        <div class="box"><h1>Baby essentials & fun toys|<br>Amazon Brands & more </h1>
           <div class="box-content">
-            <div class="box-img" style="background-image: url('https://m.media-amazon.com/images/I/41ThUxORQvL._SX300_SY300_QL70_FMwebp_.jpg');"></div>
+            <div class="box-img" style="background-image: url('file:///D:/Downloads/41p2Ggy0wPL._SX300_SY300_QL70_FMwebp_.webp');"></div>
             <p>See more offers</p>
           </div>
         </div>
