--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </header>
       <div class="hero-section">
       <div class="shop-section">
-        <div class="box"><h1>Upto 75% off|<br>Headphones</h1>
+        <div class="box"><h2>Upto 75% off|<br>Headphones</h2>
           <div class="box-content">
             <div class="box-img" style="background-image: url('https://m.media-amazon.com/images/I/41ThUxORQvL._SX300_SY300_QL70_FMwebp_.jpg');"></div>
             <p>See more offers</p>
@@ -79,43 +79,98 @@
             <p>See more offers</p>
           </div>
         </div>
-        <div class="box"><h3>Revamp your home in style</h3>
+        <div class="box"><h2>Revamp your home in style</h2>
           <div class="box-content">
             <div class="box-img" style="background-image: url('file:///C:/Users/hp/Pictures/StoryHome_-_PC._SX3000_QL85_.jpg');"></div>
             <p>See more offers</p>
           </div>
         </div>
-        <div class="box"><h4>Get the perfect screen size| TVs starting <i class="fa-solid fa-indian-rupee-sign"></i>6,999</h4>
+        <div class="box"><h2>Get the perfect screen size| TVs starting <i class="fa-solid fa-indian-rupee-sign"></i>6,999</h2>
           <div class="box-content">
             <div class="box-img" style="background-image: url('file:///C:/Users/hp/Pictures/BLAUPUNKT_Bannet_1242x700.jpg');"></div>
             <p>See more offers</p>
           </div>
         </div>
-        <div class="box"><h1>Baby essentials & fun toys|<br>Amazon Brands & more </h1>
+        <div class="box"><h2>Baby essentials & fun toys|<br>Amazon Brands & more </h2>
           <div class="box-content">
             <div class="box-img" style="background-image: url('file:///D:/Downloads/41p2Ggy0wPL._SX300_SY300_QL70_FMwebp_.webp');"></div>
             <p>See more offers</p>
           </div>
         </div>
-        <div class="box"><h2>Upto 60% off| Styles for men</h2>
+        <div class="box"><h2>Automotive essentials | Upto 60% off</h2>
           <div class="box-content">
-            <div class="box-img" style="background-image: url('file:///C:/Users/hp/Pictures/Men_pc_deal._SX3000_QL85_.jpg');"></div>
+            <div class="box-img" style="background-image: url('https://m.media-amazon.com/images/I/61G-1zjv41L._SX300_SY300_QL70_FMwebp_.jpg');"></div>
             <p>See more offers</p>
           </div>
         </div>
-        <div class="box"><h3>Revamp your home in style</h3>
+        <div class="box"><h2>Starting <i class="fa-solid fa-indian-rupee-sign"></i>99 | Start Your Journey </h2>
           <div class="box-content">
-            <div class="box-img" style="background-image: url('file:///C:/Users/hp/Pictures/StoryHome_-_PC._SX3000_QL85_.jpg');"></div>
+            <div class="box-img" style="background-image: url('https://images-eu.ssl-images-amazon.com/images/G/31/img19/Sports/GW_Desktop/1199101_379x304_Compressed._SY304_CB448278349_.jpg');"></div>
             <p>See more offers</p>
           </div>
         </div>
-        <div class="box"><h4>Get the perfect screen size| TVs starting <i class="fa-solid fa-indian-rupee-sign"></i>6,999</h4>
+        <div class="box"><h2>Starting <i class="fa-solid fa-indian-rupee-sign"></i>139 | Amazon Brands & More</h2>
           <div class="box-content">
-            <div class="box-img" style="background-image: url('file:///C:/Users/hp/Pictures/BLAUPUNKT_Bannet_1242x700.jpg');"></div>
+            <div class="box-img" style="background-image: url('https://m.media-amazon.com/images/I/81mrMggUQnS._AC_UL320_.jpg');"></div>
             <p>See more offers</p>
           </div>
         </div>
         </div>
-      </div>
+        </div>
+        <footer>
+          <div class="footer-panel1">
+        Back To Top
+          </div>
+          <div class="footer-panel2">
+            <ul>
+              <p>Get to Know Us</p>
+              <a>About Us</a>
+              <a>Careers</a>
+              <a>Press Releases</a>
+              <a>Amazon Science</a>
+            </ul>
+            <ul>
+              <p>Connect with Us</p>
+              <a><i class="fa-brands fa-facebook"></i> Facebook</a>
+              <a><i class="fa-brands fa-twitter"></i> Twitter</a>
+              <a><i class="fa-brands fa-instagram"></i> Instagram</a>
+            </ul>
+            <ul>
+              <p>Make Money with Us</p>
+              <a>Sell on Amazon</a>
+              <a>Sell under Amazon Accelerator</a>
+              <a>Protect and Build Your Brand</a>
+              <a>Amazon Global Selling</a>
+              <a>Become an Affiliate</a>
+              <a>Fulfilment by Amazon</a>
+              <a>Advertise Your Products</a>
+              <a>Amazon Pay on Merchants</a>
+            </ul>
+            <ul>
+              <p>Let Us Help You</p>
+              <a>COVID-19 and Amazon</a>
+              <a>Your Account</a>
+              <a>Returns Centre</a>
+              <a>100% Purchase Protection</a>
+              <a>Amazon App Download</a>
+              <a>Help</a>
+            </ul>
+          </div>
+          <div class="footer-panel3">
+            <div class="logo2">
+
+            </div>
+          </div>
+          <div class="footer-panel4">
+            <div class="pages">
+             <a>Conditions Of Use & Sales &nbsp;</a>
+             <a>&nbsp; Privacy Notice &nbsp;</a>
+             <a>&nbsp; Internet Based-Ads</a>
+            </div>
+            <div class="copyright">
+              © 1996-2024, Amazon.com, Inc. or its affiliates
+            </div>
+          </div>
+        </footer>
     </body>
 </html> 
